syntax = "proto3";

package model.v1;
option go_package = "pkg/model/user;usermodel";

// User represents a user entity.
message User {
  string username = 1;
  Scram scram = 2;
}

message Scram {
  string sha1 = 1;
  string sha256 = 2;
  string sha512 = 3;
  string sha3512 = 4;
  string salt = 5;
  int64 iteration_count = 6;
  string pepper_id = 7;
}
